# esp-ticker-server

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
cmake/: FindMySQL.cmake
src/: main.cc
src/database/: database.cc  database.hh
templates/: db_settings.h.in  esp-ticker-server.service.in  index.php.in
